MANU-6494: Fix subjects column alignment in Terms overview.

--- a/kmaps-app/src/views/Terms/TermsDetails/TermsDetails.css
+++ b/kmaps-app/src/views/Terms/TermsDetails/TermsDetails.css
@@ -2,20 +2,20 @@
     margin: 0 1.5rem 2rem;
 }
 .sui-termsDetails__list {
-    display: flex;
-    flex-wrap: wrap;
     list-style: none;
     padding-left: 0;
     margin-bottom: 0;
 }
+@media (min-width: 992px) {
+    .sui-termsDetails__list {
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+    }
+}
 .sui-termsDetails__list-item {
     flex: 1 0 100%;
     line-height: 2.25rem;
-}
-@media (min-width: 768px) {
-    .sui-termsDetails__list-item {
-        flex: 1 0 45%;
-    }
 }
 .sui-termsDetails__li-subjects {
     font-style: italic;
